Add safe Pterodactyl deployment workflow